# space_shooter

./: .gitignore  CHANGELOG.md  COPYING  Cargo.toml  LICENSE-MIT  README.md
assets/: license.txt
assets/Spritesheet/: sheet.ron
resources/: display_config.ron  game_config.ron  input.ron
src/: bundle.rs  config.rs  main.rs  render_graph.rs  state.rs
src/components/: asteroid.rs  background.rs  laser.rs  life.rs  mod.rs  ship.rs
src/entities/: asteroid.rs  background.rs  ball.rs  camera.rs  enemy.rs  laser.rs  lives.rs  mod.rs  paddle.rs  ship.rs
src/resources/: laser.rs  mod.rs  play_state.rs
src/systems/: asteroid.rs  collision.rs  laser.rs  laser_collision.rs  lives.rs  mod.rs  ship.rs  ship_collision.rs
