[package]
name = "space_shooter"
version = "0.1.10"
authors = ["trsoluti <thomas_odell@trsolutions.biz>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst", features = ["metal"] }
#amethyst = { version = "0.13.*", features = ["metal"] }
lazy_static = "*"
rand = "*"
serde = "*"
serde_derive = "*"
#gfx_core = "*"
#gfx = "*"

#[patch.crates-io]
#coreaudio-sys = { git = "https://github.com/RustAudio/coreaudio-sys.git", rev = "cf3a8321f461655a304ee8aa3139d5c5c88fd379" }
